@startuml
set namespaceSeparator ::

class "time_management_ase456::main.dart::MyApp" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "time_management_ase456::main.dart::MyApp"

class "time_management_ase456::main.dart::MyHomePage" {
  +String title
  +State<MyHomePage> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "time_management_ase456::main.dart::MyHomePage"

class "time_management_ase456::main.dart::_MyHomePageState" {
  +dynamic allRecords
  -DateTime? _selectedDateStart
  -DateTime? _selectedDateEnd
  -bool _prioritySelected
  +String heading
  +void initState()
  +Widget build()
  -String _convertDateToFormattedString()
  -void _whenPriorityPressed()
  -void _whenReportPressed()
}

"flutter::src::widgets::framework.dart::State" <|-- "time_management_ase456::main.dart::_MyHomePageState"

class "time_management_ase456::util::firebase_options.dart::DefaultFirebaseOptions" {
  {static} +FirebaseOptions web
  {static} +FirebaseOptions android
  {static} +FirebaseOptions windows
  {static} +FirebaseOptions currentPlatform
}

"time_management_ase456::util::firebase_options.dart::DefaultFirebaseOptions" o-- "firebase_core_platform_interface::firebase_core_platform_interface.dart::FirebaseOptions"

class "time_management_ase456::views::addRecord.dart::AddRecord" {
  +State<AddRecord> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "time_management_ase456::views::addRecord.dart::AddRecord"

class "time_management_ase456::views::addRecord.dart::_AddRecordState" {
  -String _selectedValue
  -String _timeInHoursFrom
  -String _timeInMinutesFrom
  -String _amOrPmFrom
  -String _timeInHoursTo
  -String _timeInMinutesTo
  -String _amOrPmTo
  -DateTime? _selectedDate
  +dynamic allTags
  +List<dynamic> tagsToList
  -String? _timeFrom
  -String? _timeTo
  -String? _description
  -String _newTag
  +void initState()
  -void _presentDatePicker()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "time_management_ase456::views::addRecord.dart::_AddRecordState"

class "time_management_ase456::views::queryRecord.dart::QueryRecord" {
  +State<QueryRecord> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "time_management_ase456::views::queryRecord.dart::QueryRecord"

class "time_management_ase456::views::queryRecord.dart::_QueryRecordState" {
  +List<String> queryOption
  -String _selectedValue
  -String? _valueToFindInDatabase
  +List<dynamic> results
  +void initState()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "time_management_ase456::views::queryRecord.dart::_QueryRecordState"

class "time_management_ase456::views::tasks_list.dart::TasksList" {
  +List<dynamic>? tasks
  +State<TasksList> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "time_management_ase456::views::tasks_list.dart::TasksList"

class "time_management_ase456::views::tasks_list.dart::_TasksListState" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "time_management_ase456::views::tasks_list.dart::_TasksListState"


@enduml
